fixed carousel flickering

--- a/django/login/static/login/style.css
+++ b/django/login/static/login/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .form {
-  width: 615px;
+  min-width: 615px;
   display: flex;
   justify-content: center;
   margin-top: 75px;
